--- a/CruzadaSite/Cruzada/templates/includes/clienteModal.html
+++ b/CruzadaSite/Cruzada/templates/includes/clienteModal.html
@@ -92,7 +92,7 @@
         <div class="col-sm-4">Email:
         </div>
         <div class="col-sm-8">
-            <strong>email</strong>
+            <strong><%= email %></strong>
         </div>
     </div>
     <div class="form-group">
