--- a/CruzadaSite/Cruzada/templates/includes/busquedaOnlineModal.html
+++ b/CruzadaSite/Cruzada/templates/includes/busquedaOnlineModal.html
@@ -8,7 +8,7 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="form-group">
+                        <div class="form-group" id="boContent">
                             <label>
                                 <input type="radio" name="sucursal">Libertad
                             </label>
@@ -29,3 +29,15 @@
         </div>
     </div>
 </div>
+<script type="text/template" class="boTemplate">
+<%
+_.each(sucursal, function(element){
+
+%>
+    <label>
+        <input type="radio" name="sucursal"><%= element %>
+    </label>
+<%
+    });
+%>
+</script>
