--- a/CruzadaSite/Cruzada/templates/pedidos.html
+++ b/CruzadaSite/Cruzada/templates/pedidos.html
@@ -17,7 +17,7 @@
                 <h3 class="pull-left"><strong>Gestionar Pedidos</strong></h3>
             </div>
             <div class="pull-right">
-                <a href="ecommerce_product_view.html" class="btn btn-success m-t-10"><i class="fa fa-plus p-r-10"></i>Nuevo Pedido</a>
+                <a href="#" class="btn btn-success m-t-10"><i class="fa fa-plus p-r-10"></i>Nuevo Pedido</a>
             </div>
         </div>
             <div class="row">
@@ -35,27 +35,24 @@
                                         <table id="externos-table" class="table table-tools table-hover">
                                             <thead>
                                                 <tr>
-                                                    <th><strong>Pedido</strong>
-                                                    <th><strong>Origen</strong>
+                                                    <th class="dt-center"><strong>Pedido</strong>
+                                                    <th class="dt-center"><strong>Origen</strong>
                                                     </th>
-                                                    <th><strong>Destino</strong>
+                                                    <th class="dt-center"><strong>Estado</strong>
                                                     </th>
-                                                    <th><strong>Estado</strong>
-                                                    </th>
-                                                    <th><strong>Acción</strong>
+                                                    <th class="dt-center"><strong>Acción</strong>
                                                     </th>
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                {% for pedido in lista_pedidos %}
+                                                {% for pedido in pedidos_externos %}
                                                 <tr>
-                                                    <td>{{ pedido.codigo }}</td>
-                                                    <td>{{ pedido.descripcion }}</td>
-                                                    <td>{{ pedido.talle }}</td>
-                                                    <td class="text-center">
-                                                        <span class="label label-success w-300">Online</span>
+                                                    <td class="dt-center">{{ pedido.id|stringformat:"010d" }}</td>
+                                                    <td class="dt-center">{{ pedido.origen }}</td>
+                                                    <td class="dt-center">
+                                                        <span class="label label-success w-300">{{ pedido.estado }}</span>
                                                     </td>
-                                                    <td class="text-center ">
+                                                    <td class="dt-center">
                                                         <a href="#" class="edit btn btn-sm btn-default"><i class="fa fa-pencil"></i> Edit</a>
                                                     </td>
                                                 </tr>
@@ -65,34 +62,31 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane fade active in" id="propios">
+                            <div class="tab-pane fade" id="propios">
                                 <div class="row">
                                     <div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
                                         <table id="propios-table" class="table table-tools table-hover">
                                             <thead>
                                                 <tr>
-                                                    <th><strong>Pedido</strong>
-                                                    <th><strong>Origen</strong>
+                                                    <th class="dt-center"><strong>Pedido</strong>
+                                                    <th class="dt-center"><strong>Destino</strong>
                                                     </th>
-                                                    <th><strong>Destino</strong>
+                                                    <th class="dt-center"><strong>Estado</strong>
                                                     </th>
-                                                    <th><strong>Estado</strong>
-                                                    </th>
-                                                    <th><strong>Acción</strong>
+                                                    <th class="dt-center"><strong>Acción</strong>
                                                     </th>
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                {% for pedido in lista_pedidos %}
+                                                {% for pedido in pedidos_propios %}
                                                 <tr>
-                                                    <td>{{ pedido.codigo }}</td>
-                                                    <td>{{ pedido.descripcion }}</td>
-                                                    <td>{{ pedido.talle }}</td>
-                                                    <td class="text-center">
-                                                        <span class="label label-success w-300">Online</span>
+                                                    <td class="dt-center">{{ pedido.id|stringformat:"010d" }}</td>
+                                                    <td class="dt-center">{{ pedido.destino }}</td>
+                                                    <td class="dt-center">
+                                                        <span class="label label-success w-300">{{ pedido.estado }}</span>
                                                     </td>
-                                                    <td class="text-center ">
-                                                        <a href="#" class="edit btn btn-sm btn-default"><i class="fa fa-pencil"></i> Edit</a>
+                                                    <td class="dt-center">
+                                                        <a href="{% url 'pedido_detalle' %}" class="edit btn btn-sm btn-default"><i class="fa fa-pencil"></i> Edit</a>
                                                     </td>
                                                 </tr>
                                                 {% endfor %}
